--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -16,7 +16,7 @@
   <div>
     <tr class="tweet_table">
       <td class="content2"><%= form.label :tweet %></td>
-      <td><%= form.text_field :content, size: "110" %></td>
+      <td style="word-wrap:break-word;"><%= form.text_field :content, size: "110" %></td>
       <td><%= form.submit "登録" %></td>
     </tr>
   </div>
