--- a/app/assets/stylesheets/tweets.scss
+++ b/app/assets/stylesheets/tweets.scss
@@ -49,7 +49,7 @@ li{
 .footer{
   width: 980px;
   height: 100px;
-  position: absolute;
+  position: relative;
   bottom: 0;
   background-color: #4D4D4D;
   display: table;
